test/files/neg/plugin-cyclic-dependency/lib/plugins.jar.desired.sha1
1ebd578d54bfe193d621b848f49cac00f7704917 ?plugins.jar
